--- a/Full/MVCDemo-Full-472/MVCDemo-Full-472/MVCDemo-Full-472.csproj
+++ b/Full/MVCDemo-Full-472/MVCDemo-Full-472/MVCDemo-Full-472.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BlazorServerDemo-Core-60.sln" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
